--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <!--owl css-->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+    <link rel="shortcut icon" href="img/favicon1.png" type="image/x-icon">
 
-    <title>NETFLIX</title>
+    <title>ARIFLIX</title>
 </head>
 <body>
     <header>
